--- a/views/management_users.html
+++ b/views/management_users.html
@@ -16,21 +16,24 @@
     <div class="vbox">
       <div class="wrapper-sm b-b" ng-hide="isShow(0)">
         <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
-          <a class="btn btn-xs btn-default" ng-click="returnUpper()">返回</a>
+          <a class="btn btn-xs btn-default" ng-click="returnUpper(idx)">返回</a>
         </div>
       </div>
       <div class="row-row">
         <div class="cell scrollable hover">
           <div class="cell-inner">
             <div class="list-group no-radius no-border no-bg m-b-none">
-              <a ng-repeat="item in subbuses| filter:{mainbus:mainfilter}| orderBy:'name'" class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectService(item)">
-                <span class="block m-l-n" ng-class="{'m-n': item.selected }">{{ item.name ? item.name : 'Untitled' }}</span>
+              <a ng-repeat="item in services[idx] | filter:{Code:filter[idx-1]}" class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectService(item,idx)"
+                <span class="block m-l-n" ng-class="{'m-n': item.selected }">{{ item.Code}}</span>
               </a>
             </div>
-            <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="(subbuses | filter:{mainbus:mainfilter}).length" translate="content.management.no_subbus">No Service found</div>
+            <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="(services[idx] | filter:{Code:filter[idx-1]}).length" translate="content.management.no_subbus">No Service found</div>
           </div>
         </div>
       </div>
+       <div class="wrapper b-t">
+         <a href class="btn btn-sm btn-default" ng-click="createService()"><i class="fa fa-plus fa-fw m-r-xs"></i> New Service</a>
+       </div>
     </div>
   </div>
   <!-- /column -->
@@ -41,7 +44,7 @@
   <!-- column -->
   <div class="col bg-white-only">
     <div class="vbox">
-      <div class="wrapper-sm b-b">
+      <div class="wrapper-sm b-b"  ng-show="ConfShow()">
             <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
               <a class="btn btn-xs btn-default" ng-click="addUser()">Add</a>
               <a class="btn btn-xs btn-default" ng-click="attachUser()">Attach</a>
@@ -50,7 +53,7 @@
       <div class="row-row">
         <div class="cell">
           <div class="cell-inner">
-            <div class="wrapper-lg">
+            <div class="wrapper-lg"  ng-show="ConfShow()">
               <div class="panel-body b-b b-light">
                  Search: <input id="filter" type="text" class="form-control input-sm w-sm inline m-r"/>
               </div>
