--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -411,6 +411,10 @@
       <i class="icon-user icon"></i>
       <span translate="aside.nav.manager_nav.SERVICES">Services</span>
     </a>
+    <a ui-sref="management.auth">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.manager_nav.AUTH">Auth</span>
+    </a>
   </li>
 </ul>
 
