--- a/views/add_node_modal.html
+++ b/views/add_node_modal.html
@@ -1,17 +1,17 @@
 <div class="modal-body wrapper-lg">
   <div class="row">
-      <p>New IDC</p>
+      <p>New Node</p>
       <form role="form">
         <div class="text-danger wrapper text-center" ng-show="formError">
           {{formError}}
         </div>
         <div class="form-group form-validation">
-          <label>IdcName</label>
-          <input type="text" class="form-control" ng-model="newIdc.IdcName"  placeholder="Enter IDC Name" required>
+          <label>Descript</label>
+          <input type="text" class="form-control" ng-model="newNode.Desc"  placeholder="Enter Node Desc" required>
         </div>
-        <div class="form-group">
-          <label>IdcCode</label>
-          <input type="text" class="form-control"  ng-model="newIdc.IdcCode"  placeholder="Enter IDC Code" required>
+        <div class="form-group form-validation">
+          <label>Url</label>
+          <input type="text" class="form-control" ng-model="newNode.Url"  placeholder="Enter Node Url" required>
         </div>
         <div class="checkbox m-t-lg">
           <button type="submit" class="btn btn-sm btn-success pull-right text-uc m-t-n-xs" ng-click="ok()" ng-disabled='form.$invalid'><strong>New</strong></button>
