--- a/views/management_auth.html
+++ b/views/management_auth.html
@@ -45,7 +45,7 @@
               <!-- fields -->
               <div class="panel panel-default">
                   <div class="panel-heading">
-                    Responsive Table
+                    Node List
                   </div>
                   <div class="row wrapper">
                     <div class="col-sm-5 m-b-xs">
@@ -73,7 +73,7 @@
                   <footer class="panel-footer">
                     <div class="row">
                       <div class="col-lg-offset-2 col-lg-10">
-                        <button type="submit" class="btn btn-sm btn-info pull-right">Commit</button>
+                        <button type="submit" class="btn btn-sm btn-info pull-right" ng-click="CommitAuth()">Commit</button>
                       </div>
                     </div>
                   </footer>
