--- a/views/management_services.html
+++ b/views/management_services.html
@@ -75,12 +75,57 @@
                       <button type="submit" class="btn btn-success" ng-click="commitService()" ng-disabled='form.$invalid'>Submit</button>
                     </footer>
                   </div>
+                  <div class="panel panel-default" ng-show="ConfShow()">
+                    <div class="panel-heading">
+                      Service auth table
+                    </div>
+                    <div class="row wrapper">
+                      <div class="col-sm-5 m-b-xs">
+                            <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
+                              <a class="btn btn-xs btn-default" ng-click="addUser()">Add</a>
+                            </div>
+                      </div>
+                      <div class="col-sm-4">
+                      </div>
+                    </div>
+                    <div class="table-responsive">
+                      <table class="table m-b-none" ui-jq="footable" ui-refresh="people" data-filter="#filter" data-page-size="5">
+                        <thead>
+                          <tr>
+                              <th>
+                                  User Name
+                              </th>
+                              <th>
+                                  Role
+                              </th>
+                              <th>
+                                delete
+                              </th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr ng-repeat="person in people">
+                              <td>{{person.name}}</td>
+                              <td>{{person.role}}</td>
+                              <td><button class="btn m-b-xs btn-sm btn-danger" ng-click="deleteUser(person)"><i class="fa fa-trash-o"></i></button></td>
+                          </tr>
+                        </tbody>
+                        <tfoot class="hide-if-no-paging">
+                          <tr>
+                              <td colspan="5" class="text-center">
+                                  <ul class="pagination"></ul>
+                              </td>
+                          </tr>
+                        </tfoot>
+                      </table>
+                    </div>
+                </div>
               </div>
               <!-- / fields -->
             </div>
           </div>
         </div>
-      </div>
+      </div>  
     </div>
   </div>
   <!-- /column -->
