--- a/views/management_users.html
+++ b/views/management_users.html
@@ -107,37 +107,24 @@
                           {{formError}}
                         </div>                    
                         <div class="form-group">
-                          <div class="col-sm-9 checkbox">
-                            <label class="i-checks">
-                              <input type="checkbox" value="">
-                              <i></i>
-                              Option one
-                            </label>
+                          <label class="col-sm-2 control-label">SYSTEM权限</label>
+                          <div class="col-sm-10">
+                              <label class="i-switch m-t-xs m-r">
+                                <input type="checkbox" ng-checked="isSystem()" ng-click="commitSystem($event)">
+                                <i></i>
+                              </label>
                           </div>
                         </div>
-
-                        <div class="form-group m-b-sm">
-                          <div class="col-sm-9 checkbox">
-                            <label class="i-checks">
-                              <input type="checkbox" checked value="">
-                              <i></i>
-                              Option two checked
-                            </label>
-                          </div>
-                       </div>
                         <div class="form-group">
-                          <div class="col-sm-9 checkbox">
-                            <label class="i-checks">
-                              <input type="checkbox" value="">
-                              <i></i>
-                              Reset PassWord
-                            </label>
+                          <label class="col-sm-2 control-label">密码重置</label>
+                          <div class="col-sm-10">
+                              <label class="i-switch m-t-xs m-r">
+                                <input type="checkbox"  ng-click="commitPassWdReset($event)">
+                                <i></i>
+                              </label>
                           </div>
                         </div>
                     </div>
-                    <footer class="panel-footer text-right bg-light lter">
-                      <button type="submit" class="btn btn-success" ng-click="commitService()" ng-disabled='form.$invalid'>Submit</button>
-                    </footer>
                   </div>
               <!-- / fields -->
             </div>
