--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/font.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
   <link rel="stylesheet" href="vendor/modules/angularjs-toaster/toaster.css" type="text/css" />
+  <link rel="stylesheet" href="vendor/angular/angular-tags-input/ng-tags-input.min.css" type="text/css" />
 </head>
 <body ng-controller="AppCtrl">
   <toaster-container toaster-options="{'position-class': 'toast-top-right', 'close-button':true}"></toaster-container>
@@ -43,6 +44,7 @@
   <script src="vendor/angular/angular-translate/storage-cookie.js"></script>
   <script src="vendor/angular/angular-translate/storage-local.js"></script>
   <script src="vendor/modules/angularjs-toaster/toaster.js"></script>
+  <script src="vendor/angular/angular-tags-input/ng-tags-input.min.js"></script>
   
   <!-- App -->
   <script src="js/app.js"></script>
