--- a/views/management_services.html
+++ b/views/management_services.html
@@ -108,7 +108,7 @@
                         </thead>
                         <tbody>
                           <tr ng-repeat="User in Users">
-                              <td>{{User.name}}</td>
+                              <td>{{User.Username}}</td>
                               <td>{{User.ServiceAuths[0].Role.Name}}</td>
                               <td><button class="btn m-b-xs btn-sm btn-danger" ng-click="deleteUser(User)"><i class="fa fa-trash-o"></i></button></td>
                           </tr>
