--- a/views/blocks/aside.html
+++ b/views/blocks/aside.html
@@ -6,7 +6,7 @@
     <!-- user -->
     <div class="clearfix hidden-xs text-center hide" id="aside-user">
       <div class="dropdown wrapper" dropdown>
-        <a ui-sref="app.page.profile">
+        <a>
           <span class="thumb-lg w-auto-folded avatar m-t-sm">
             <img src="img/a0.jpg" class="img-full" alt="...">
           </span>
@@ -33,7 +33,7 @@
             <a href>Settings</a>
           </li>
           <li>
-            <a ui-sref="app.page.profile">Profile</a>
+            <a>Profile</a>
           </li>
           <li>
             <a href>
@@ -55,20 +55,5 @@
     <!-- nav -->
     <nav ui-nav class="navi" ng-include="'tpl/blocks/nav.html'"></nav>
     <!-- nav -->
-
-    <!-- aside footer -->
-    <div class="wrapper m-t">
-      <div class="text-center-folded">
-        <span class="pull-right pull-none-folded">60%</span>
-        <span class="hidden-folded" translate="aside.MILESTONE">Milestone</span>
-      </div>
-      <progressbar value="60" class="progress-xxs m-t-sm dk" type="info"></progressbar>
-      <div class="text-center-folded">
-        <span class="pull-right pull-none-folded">35%</span>
-        <span class="hidden-folded" translate="aside.RELEASE">Release</span>
-      </div>
-      <progressbar value="35" class="progress-xxs m-t-sm dk" type="primary"></progressbar>
-    </div>
-    <!-- / aside footer -->
   </div>
 </div>
