--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -6,7 +6,11 @@
   <li>
     <a ui-sref="docker.dashboard">
       <i class="icon-user icon"></i>
-      <span translate="aside.nav.docker_nav.dashboard">Dashboard</span>
+      <span translate="aside.nav.docker_nav.DASHBOARD">Dashboard</span>
+    </a>
+    <a ui-sref="docker.containers">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.docker_nav.CONTAINERS">Services</span>
     </a>
   </li>
 
