--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -17,6 +17,17 @@
   <li class="line dk hidden-folded"></li>
 
   <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">          
+    <span translate="aside.nav.release_nav.Release_TITLE">Release</span>
+  </li>  
+  <li>
+    <a ui-sref="release.service">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.release_nav.SERVICE">Service</span>
+    </a>
+  </li>
+
+  <li class="line dk hidden-folded"></li>
+  <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">          
     <span translate="aside.nav.manager_nav.Manager_TITLE">Manager</span>
   </li>  
   <li>
