--- a/views/docker_containers.html
+++ b/views/docker_containers.html
@@ -6,7 +6,7 @@
   app.hideAside = false;
   app.hideFooter = true;
   " ng-controller="DockerContainersCtrl">
-  <script type="text/ng-template" id="scaleContianerModalContent.html">
+  <script type="text/ng-template" id="0.html">
     <div ng-include="'tpl/scale_container_modal.html'"></div>
   </script>
   <div class="col w b-r" ng-repeat="idx in count" ng-show="isShow(idx)">
