--- a/views/scale_container_modal.html
+++ b/views/scale_container_modal.html
@@ -8,7 +8,7 @@
         <div class="form-group">
           <label class="col-sm-2 control-label">Container Count</label>
           <div class="col-sm-10">
-              <input type="text" class="form-control" ng-model="ContainerCount" placeholder="Enter Number" required>
+              <input type="text" class="form-control" ng-model="ContainerScaleForm.Scale" placeholder="Enter Number" required>
           </div>
         </div>
         <div class="checkbox m-t-lg">
